--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "i18next-async-storage-backend",
-  "version": "1.0.2",
+  "name": "i18next-async-mmkv-storage-backend",
+  "version": "1.0.0",
   "description": "caching layer backend for i18next using react native async storage",
   "main": "./index.js",
   "jsnext:main": "dist/es/index.js",
@@ -8,8 +8,8 @@
     "i18next",
     "i18next-backend"
   ],
-  "homepage": "https://github.com/timbrandin/i18next-async-storage-backend",
-  "bugs": "https://github.com/timbrandin/i18next-async-storage-backend/issues",
+  "homepage": "https://github.com/younes200/i18next-async-mmkv-storage-backend",
+  "bugs": "https://github.com/younes200/i18next-async-mmkv-storage-backend/issues",
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "6.23.0",
@@ -30,11 +30,11 @@
     "yargs": "6.6.0"
   },
   "peerDependencies": {
-    "@react-native-community/async-storage": "*"
+    "react-native-mmkv-storage": "*"
   },
   "scripts": {
     "clean": "rimraf dist && mkdirp dist",
-    "copy": "cp ./dist/umd/i18nextAsyncStorageBackend.min.js ./i18nextAsyncStorageBackend.min.js && cp ./dist/umd/i18nextAsyncStorageBackend.js ./i18nextAsyncStorageBackend.js",
+    "copy": "cp ./dist/umd/i18nextAsyncMMKVStorageBackend.min.js ./i18nextAsyncMMKVStorageBackend.min.js && cp ./dist/umd/i18nextAsyncMMKVStorageBackend.js ./i18nextAsyncMMKVStorageBackend.js",
     "build:es": "BABEL_ENV=jsnext babel src --out-dir dist/es",
     "build:cjs": "babel src --out-dir dist/commonjs",
     "build:umd": "rollup -c rollup.config.js --format umd && rollup -c rollup.config.js --format umd --uglify",
@@ -46,7 +46,8 @@
   },
   "author": [
     "Jan Mühlemann <jan.muehlemann@gmail.com> (https://github.com/jamuhl)",
-    "Tim Brandin <tim.brandin@gmail.com> (https://github.com/timbrandin)"
+    "Tim Brandin <tim.brandin@gmail.com> (https://github.com/timbrandin)",
+    "Younes Benaomar <younes.benaomar@gmail.com> (https://github.com/younes200)",
   ],
   "license": "MIT"
 }
