--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18next-mmkv-storage-backend",
-  "version": "1.0.6",
+  "version": "1.2.0",
   "description": "caching layer backend for i18next using react native async storage",
   "main": "./index.js",
   "jsnext:main": "dist/es/index.js",
@@ -10,18 +10,19 @@
   ],
   "homepage": "https://github.com/younes200/i18next-mmkv-storage-backend",
   "bugs": "https://github.com/younes200/i18next-mmkv-storage-backend/issues",
-  "dependencies": {},
   "devDependencies": {
     "babel-cli": "6.23.0",
     "babel-core": "6.23.1",
     "babel-eslint": "7.1.1",
-    "babel-preset-es2015-native-modules": "^6.9.4",
     "babel-preset-es2015": "6.22.0",
+    "babel-preset-es2015-native-modules": "^6.9.4",
     "babel-preset-es2015-rollup": "3.0.0",
     "babel-preset-stage-0": "^6.22.0",
     "eslint": "3.16.1",
     "eslint-config-airbnb": "14.1.0",
+    "install-peers": "^1.0.3",
     "mkdirp": "0.5.1",
+    "react-native-mmkv-storage": "^0.4.2",
     "rimraf": "2.6.1",
     "rollup": "0.41.4",
     "rollup-plugin-babel": "2.7.1",
@@ -30,7 +31,7 @@
     "yargs": "6.6.0"
   },
   "peerDependencies": {
-    "react-native-mmkv-storage": "*"
+    "react-native-mmkv-storage": ">=0.4.2"
   },
   "scripts": {
     "clean": "rimraf dist && mkdirp dist",
@@ -44,10 +45,6 @@
     "preversion": "npm run build && git push",
     "postversion": "git push && git push --tags"
   },
-  "author": [
-    "Jan Mühlemann <jan.muehlemann@gmail.com> (https://github.com/jamuhl)",
-    "Tim Brandin <tim.brandin@gmail.com> (https://github.com/timbrandin)",
-    "Younes Benaomar <younes.benaomar@gmail.com> (https://github.com/younes200)",
-  ],
+  "author": "Younes Benaomar <younes.benaomar@gmail.com> (https://github.com/younes200)",
   "license": "MIT"
 }
